--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "farmConnect",
-    "slug": "farmConnect",
+    "name": "KrishiBazaar",
+    "slug": "KrishiBazaar App",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
